--- a/neuralnet.ipynb
+++ b/neuralnet.ipynb
@@ -26,7 +26,7 @@
     "from torch import optim, nn, Tensor\n",
     "from torch.nn import functional as F\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "from torchvision import datasets\n",
+    "from torchvision import datasets, models\n",
     "from torchvision.transforms import v2\n",
     "\n",
     "from __future__ import annotations"
@@ -192,7 +192,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Net()\n",
+    "# model = Net()\n",
+    "model = models.resnet18(pretrained=False)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "\n",
     "optimizer = optim.SGD(model.parameters(), lr=0.001, momentum=0.9)\n",
